add tags to controllers in swagger
